Fixes flickering for editor tooltip. New tooltip style. Treeview needs CSS styles. Pending Navigation data

--- a/src/traceView/trace-view.css
+++ b/src/traceView/trace-view.css
@@ -78,3 +78,37 @@
 #gutterNavigatorSlider {
    min-width: 40px;
 }
+
+.popover{
+    padding: 0;
+    margin: 0;
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    -o-border-radius: 0;
+    border-radius: 0;
+}
+
+#editorTooltipContentId .custom-popover-title{
+    line-height: 18px;
+    font-size: 12px;
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    -o-border-radius: 0;
+    border-radius: 0;
+    margin: 4px;
+    border: none;
+    border-bottom: 1px solid #eee;
+}
+
+#editorTooltipContentId:hover .custom-popover-title{
+    border-bottom: 1px solid #0066ff;
+}
+
+#editorTooltipContentId .popover-content{
+    padding: 0;
+    margin: 0;
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    -o-border-radius: 0;
+    border-radius: 0;
+}
